--- a/app.html
+++ b/app.html
@@ -56,12 +56,12 @@
 		<script>
 		 // Initialize Firebase
 			var config = {
-				apiKey: "AIzaSyBVzTcyAuEIi3XqHJfJ_Fu543lnqytDK9M",
-				authDomain: "welgeen003.firebaseapp.com",
-				databaseURL: "https://welgeen003.firebaseio.com",
-				projectId: "welgeen003",
-				storageBucket: "welgeen003.appspot.com",
-				messagingSenderId: "1056729225262"
+				apiKey: "",
+				authDomain: "",
+				databaseURL: "",
+				projectId: "",
+				storageBucket: "",
+				messagingSenderId: ""
 			};
 			
 			//firebase.initializeApp(config);
